@startuml

title __MKV_WATCH's Class Diagram__\n

  namespace  {
    namespace om.example.mkv_watch {
      class com.example.mkv_watch.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.mkv_watch {
      class com.example.mkv_watch.HelloController {
          + but : Button
          + circle : Circle
          + image_button : Button
          + img : ImageView
          + polygon : Polygon
          + rectangle : Rectangle
          + text : TextField
          + text_button : Button
          + timer_button : Button
          ~ c1 : boolean
          ~ c2 : boolean
          ~ c3 : boolean
          ~ t1 : boolean
          + Tim()
          + button_first()
          + button_second()
          + img_go()
          + initialize()
          + text_go()
          + timer_on()
      }
    }
  }
  

  com.example.mkv_watch.HelloApplication -up-|> javafx.application.Application
  com.example.mkv_watch.HelloController .up.|> javafx.fxml.Initializable
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentOne : componentOne1
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentThree : componentThree3
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ComponentTwo : componentTwo2
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.TimeServer : timer
  com.example.mkv_watch.HelloController o-- com.example.mkv_watch.model.ConcreteSubject : subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
